--- a/kisah.html
+++ b/kisah.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Website</title>
+    <title>Kisah</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <!-- <link rel="stylesheet" href="css/animations/text-jumping.css" /> -->
     <link rel="stylesheet" href="css/kisah.css" />
@@ -15,42 +15,129 @@
     <!-- Tempat untuk navbar -->
     <div id="navbar"></div>
 
-    <h1 id="h1-cerita" class="mb-3 mt-5 text-center">SEORANG ANAK DI PESISIR PANTAI</h1>
+    <h1 id="h1-cerita" class="mb-3 mt-5 text-center ">SEORANG ANAK DI PESISIR PANTAI</h1>
 
-    <div class="container">
-        <div class="card-group vgr-cards">
-          <div class="card">
-            <div class="card-img-body">
-            <img class="card-img " src="image/animasi/animasi.png" alt="Card image cap">
+    <div class="container shadow shadow-2 mb-5 rounded border border-primary ">
+        <div class="row">
+            <div class="col object d-flex flex-column justify-content-center">
+                <img src="./image/animasi/animasi.png" alt="zoom" class="alignleft size-medium wp-image-7000 border border-primary rounded"  />
             </div>
-            <div class="card-body">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little
-                bit longer.</p>
-              <a href="#" class="btn btn-outline-primary">Primary</a>
+            <div class="col text d-flex flex-column justify-content-center">
+                <p>Disuatu Sore Hari ada, ada seorang anak yang tinggal di daerah pesisir pantai. Dia sangat senang sekali bisa ke pantai untuk menikmati indahnya laut</p> <p> Namun, Ketika sudah berada di bibir pantai. Dia kecewa karena pantainya kotor tidak terurus dengan baik</p>
             </div>
-          </div>
-          <div class="card">
-            <div class="card-img-body">
-              <img class="card-img" src="image/animasi/2.png" alt="Card image cap"></div>
-            <div class="card-body">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This card has supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-outline-primary">Primary</a>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-img-body">
-              <img class="card-img" src="image/animasi/3.png" alt="Card image cap"></div>
-            <div class="card-body">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action. This is a wider card with supporting text below as a natural lead-in
-                to additional content. This content is a little bit longer.</p>
-              <a href="#" class="btn btn-outline-primary">Primary</a>
-            </div>
-          </div>
+        </div>
+    </div>
+    <div class="container shadow shadow-2 mb-5 rounded border border-primary ">
+      <div class="row">
+        <div class="col text d-flex flex-column justify-content-center">
+          <p>Dengan inisiatif pada sang anak, tak tanggung lagi. Ia membersihkan pantai itu seorang diri meskipun tau akan kelelahan</p> <p> Ia mulai membersihkan bagian bagian yang paling mudah dibersihkan, membersihkan secara perlahan.</p>
+        </div>
+        <div class="col object d-flex flex-column justify-content-center">
+          <img src="./image/animasi/2.png" alt="zoom" class="alignleft size-medium wp-image-7000 border border-primary rounded  "  />
+        </div>       
+      </div>
+    </div>
+    <div class="container shadow shadow-2 mb-5 rounded border border-primary ">
+      <div class="row">
+        <div class="col object d-flex flex-column justify-content-center">
+          <img src="./image/animasi/3.png" alt="zoom" class="alignleft size-medium wp-image-7000 border border-primary rounded  "  />
+        </div>
+        <div class="col text d-flex flex-column justify-content-center">
+          <p>Tanpa anak kecil sadari, ternyata ia telah diliat oleh seorang Dewa ikan yang melihat dari jauh</p> <p>Kemudian Dewa ikan pun datang dan menghampiri anak tersebut dan membantu apa yang telah dilakukan oleh anak tersebut</p>
         </div>
       </div>
+    </div>
+    <div class="container shadow shadow-2 mb-5 rounded border border-primary ">
+      <div class="row">
+        <div class="col text d-flex flex-column justify-content-center">
+          <p>Tak hanya dewa laut, seorang penjaga pantai pun melihat dari jauh, apa yang sedang dilakukan oleh anak itu</p> <p> melihat dari jauh dan berrtanya apa yang dilakukan</p>
+        </div>
+        <div class="col object d-flex flex-column justify-content-center">
+          <img src="./image/animasi/4.png" alt="zoom" class="alignleft size-medium wp-image-7000 border border-primary rounded  "  />
+        </div>       
+      </div>
+    </div>
+    <div class="container shadow shadow-2 mb-5 rounded border border-primary ">
+      <div class="row">
+        <div class="col object d-flex flex-column justify-content-center">
+          <img src="./image/animasi/5.png" alt="zoom" class="alignleft size-medium wp-image-7000 border border-primary rounded  "  />
+        </div>
+        <div class="col text d-flex flex-column justify-content-center">
+          <p>Seorang penjaga pantai tersebut mendatangi anak tersebut dan bertanya apa yang dilakukan</p> <p>Anak tersebut menjawab, oh saya tadinya ingin bermain di pantai namun sudah tercemar oleh sampah, jadi saya membersihkan sampah tersebut meskipun kesusahan </p>
+        </div>
+      </div>
+    </div>
+    <div class="container shadow shadow-2 mb-5 rounded border border-primary ">
+      <div class="row">
+        <div class="col text d-flex flex-column justify-content-center">
+          <p>Seorang penjaga pantai dan Dewa ikan pun ikut turut membantu membersihkan apa yang telah dilakukan oleh anak tersebut</p> <p>Mulai dari kecil hingga yang paling besar bisa teratasi dengan baik tanpa masalah yang berat</p>
+        </div>
+        <div class="col object d-flex flex-column justify-content-center">
+          <img src="./image/animasi/6.png" alt="zoom" class="alignleft size-medium wp-image-7000 border border-primary rounded  "  />
+        </div>       
+      </div>
+    </div>
+    <div class="container shadow shadow-2 mb-5 rounded border border-primary ">
+      <div class="row">
+        <div class="col object d-flex flex-column justify-content-center">
+          <img src="./image/animasi/7.png" alt="zoom" class="alignleft size-medium wp-image-7000 border border-primary rounded"/>
+        </div>
+        <div class="col text d-flex flex-column justify-content-center">
+          <p>Dari kejauhan telihat dengan beberapa masyarakat sekitar pantai yang melihat apa yang sedang terjadi di pantai</p> <p> Masyarakat berbondong-bondong melihat apa yang dilakukan anak tersebut dan ingin membantu anak tersebut dalam kegiatan membersihkan pantai </p>
+        </div>
+      </div>
+    </div>
+    <div class="container shadow shadow-2 mb-5 rounded border border-primary ">
+      <div class="row">
+        <div class="col text d-flex flex-column justify-content-center">
+          <p>Masyarakat akhirnya tersadar apa yang telah dilakukan oleh anak tersebut membawa dampak positif</p> <p>Mereka semua yang melihat akhrinya membantu anak tersebut dalam kegiatan membersihkan sampah yang ada di pantai </p>
+        </div>
+        <div class="col object d-flex flex-column justify-content-center">
+          <img src="./image/animasi/8.png" alt="zoom" class="alignleft size-medium wp-image-7000 border border-primary rounded  "  />
+        </div>       
+      </div>
+    </div>
+    <div class="container shadow shadow-2 mb-5 rounded border border-primary ">
+      <div class="row">
+        <div class="col object d-flex flex-column justify-content-center">
+          <img src="./image/animasi/9.png" alt="zoom" class="alignleft size-medium wp-image-7000 border border-primary rounded  "  />
+        </div>
+        <div class="col text d-flex flex-column justify-content-center">
+          <p>Masyarakat pun akhirnya senang kembali apa yang telah mereka lakukan membuahkan hasil, yaitu pantai menjadi lebih bersih kembali dari sebelumnya</p> <p> Mereka akhirnya mengerti bagaimana caranya menjaga kebersihan pantai</p>
+        </div>
+      </div>
+    </div>
+    <div class="container shadow shadow-2 mb-5 rounded border border-primary ">
+      <div class="row">
+        <div class="col text d-flex flex-column justify-content-center">
+          <p>Semuanya kembali seperti dulu kembali, dimana anak-anak, remaja dan dewasa kembali bermain di area pantai yang telah dibersihkan</p> <p>mereka tidak perlu khawatir lagi jika terjadi masalah sampah yang ada di pantai, mereka akan berkumpul dan membersihkan sampah tersebut bersama-sama</p>
+        </div>
+        <div class="col object d-flex flex-column justify-content-center">
+          <img src="./image/animasi/10.png" alt="zoom" class="alignleft size-medium wp-image-7000 border border-primary rounded "  />
+        </div>       
+      </div>
+    </div>
+
+    <div class="container mt-5">
+        <!-- Card Section -->
+        <div class="card">
+            <div class="card-header bg-primary text-white text-center">
+                <h4>Kesimpulan Cerita</h4>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title text-center">Cerita ini mengajarkan kita tentang...</h5>
+                <p class="card-text text-center">
+                    Dalam cerita ini, kita bisa mengambil pelajaran mengenai pentingnya menjaga kebersihan lautan 
+                    yang bisa membawa kita kenyamanan dan kesehatan dalam kegiatan bermain di pantai, mulailah dari 
+                    hal kecil yang kita lakukan maka akan ada yang membantu anda dalam menuju kesuksesan
+                </p>
+            </div>
+            <div class="card-footer text-muted text-center mb-3 py-5">
+                <small>Kesimpulan ini dapat diterapkan dalam kehidupan sehari-hari.</small>
+            </div>
+        </div>
+    </div>
+
 
     <!-- Tempat untuk Footer -->
     <div id="footerContainer"></div>
